# BorderDNS

./: .gitignore  Cargo.toml  rustfmt.toml
.github/workflows/: ci.yml
crates/border-dns-cache/: Cargo.toml
crates/border-dns-cache/src/: lib.rs  lib_tests.rs
crates/border-dns-cli/: Cargo.toml
crates/border-dns-cli/src/: border_dns.rs  main.rs
crates/border-dns-config/: Cargo.toml
crates/border-dns-config/src/: error.rs  lib.rs  lib_tests.rs  model.rs  model_tests.rs
crates/border-dns-domain-knowledge/: Cargo.toml
crates/border-dns-domain-knowledge/src/: block_matcher.rs  domain_knowledge.rs  domain_knowledge_tests.rs  hosts_table.rs  lib.rs
crates/border-dns-facts/: Cargo.toml
crates/border-dns-facts/src/: enums.rs  enums_tests.rs  fact_event.rs  fact_event_tests.rs  fact_store.rs  fact_store_tests.rs  governance_state.rs  governance_state_tests.rs  governance_store.rs  governance_store_tests.rs  lib.rs  observation.rs  observation_tests.rs  store_manifest.rs
crates/border-dns-facts/src/emit/: mod.rs  observation.rs  observation_tests.rs
crates/border-dns-facts/src/review/: governance_state.rs  mod.rs  review_tests.rs
crates/border-dns-facts/src/schema/: mod.rs  schema_version.rs
crates/border-dns-facts/src/store/: fact_store.rs  fact_store_tests.rs  governance_store.rs  governance_store_tests.rs  mod.rs  store_manifest_tests.rs
crates/border-dns-facts/src/thresholds/: mod.rs  thresholds.rs  thresholds_tests.rs
crates/border-dns-geoip/: Cargo.toml
crates/border-dns-geoip/src/: geoip_tests.rs  lib.rs
crates/border-dns-pipeline/: Cargo.toml
crates/border-dns-pipeline/src/: lib.rs  pipeline_tests.rs
crates/border-dns-probes/: Cargo.toml
crates/border-dns-probes/src/: lib.rs  probes_tests.rs
crates/border-dns-protocol/: Cargo.toml
crates/border-dns-protocol/src/: lib.rs  message.rs  name.rs  question.rs  tcp_frame.rs  transport.rs  wire.rs
crates/border-dns-route-policy/: Cargo.toml
crates/border-dns-route-policy/src/: governance_transition.rs  governance_transition_tests.rs  lib.rs  route_policy_tests.rs  scoring.rs  scoring_tests.rs
crates/border-dns-runtime/: Cargo.toml
crates/border-dns-runtime/src/: blackhole.rs  blackhole_tests.rs  governance_worker.rs  handler.rs  lib.rs  server.rs
crates/border-dns-types/: Cargo.toml
crates/border-dns-types/src/: error.rs  record_class.rs  record_type.rs
crates/border-dns-upstream/: Cargo.toml
crates/border-dns-upstream/src/: lib.rs  lib_tests.rs
crates/dns-protocol/: Cargo.toml
crates/dns-protocol/src/: header.rs  header_tests.rs  lib.rs  message.rs  message_tests.rs  name.rs  name_tests.rs  question.rs  question_tests.rs  rr.rs  rr_tests.rs  tcp_frame.rs  tcp_frame_tests.rs  transport.rs  transport_tests.rs  wire.rs  wire_tests.rs
crates/dns-transport/: Cargo.toml
crates/dns-transport/src/: lib.rs  lib_tests.rs
crates/dns-types/: Cargo.toml
crates/dns-types/src/: lib.rs  route.rs  route_tests.rs
tests/fixtures/: default.toml  integration-test.toml
