[workspace]
resolver = "2"

members = [
    "crates/dns-types",
    "crates/dns-protocol",
    "crates/border-dns-config",
    "crates/border-dns-cache",
    "crates/border-dns-upstream",
    "crates/border-dns-runtime",
    "crates/border-dns-cli",
]

[workspace.package]
version = "0.1.2"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
authors = ["pylab-me"]
repository = "https://github.com/pylab-me/BorderDNS"
description = "BorderDNS Rust runtime: facts-aware DNS governance loop."
keywords = ["dns", "resolver", "geoip", "routing", "observability"]
categories = ["network-programming"]

[workspace.dependencies]
# ─────────────────────────────────────────────────────────────
# Internal crates
# ─────────────────────────────────────────────────────────────

dns-types = { path = "crates/dns-types" }
dns-protocol = { path = "crates/dns-protocol" }
border-dns-config = { path = "crates/border-dns-config" }
border-dns-cache = { path = "crates/border-dns-cache" }
border-dns-upstream = { path = "crates/border-dns-upstream" }
border-dns-runtime = { path = "crates/border-dns-runtime" }

# ─────────────────────────────────────────────────────────────
# Core dependencies
# ─────────────────────────────────────────────────────────────

bytes = "1"
thiserror = "2"
anyhow = "1"

# ─────────────────────────────────────────────────────────────
# Async runtime / networking
# ─────────────────────────────────────────────────────────────

tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "time",
    "signal",
    "sync",
    "io-util",
] }

# ─────────────────────────────────────────────────────────────
# Config / serialization
# ─────────────────────────────────────────────────────────────

serde = { version = "1", features = ["derive"] }
toml = "1"

# ─────────────────────────────────────────────────────────────
# CLI
# ─────────────────────────────────────────────────────────────

clap = { version = "4", features = ["derive"] }

# ─────────────────────────────────────────────────────────────
# Logging / tracing
# ─────────────────────────────────────────────────────────────

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "time",
] }

# ─────────────────────────────────────────────────────────────
# Concurrent state
# ─────────────────────────────────────────────────────────────

dashmap = "6"

# ─────────────────────────────────────────────────────────────
# Testing
# ─────────────────────────────────────────────────────────────

pretty_assertions = "1"
hex = "0.4"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

# These are too noisy for this project style.
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
similar_names = "allow"

[profile.dev]
debug = true
incremental = true

[profile.test]
debug = true
incremental = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
