[workspace]
resolver = "2"

members = [
    "crates/dns-types",
    "crates/dns-protocol",
    "crates/dns-transport",
    "crates/border-dns-config",
    "crates/border-dns-cache",
    "crates/border-dns-upstream",
    "crates/border-dns-runtime",
    "crates/border-dns-cli",
    "crates/border-dns-domain-knowledge",
    "crates/border-dns-geoip",
    "crates/border-dns-route-policy",
    "crates/border-dns-pipeline",
    "crates/border-dns-facts",
    "crates/border-dns-probes",
]

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
authors = ["pylab-me"]
repository = "https://github.com/pylab-me/BorderDNS"
description = "BorderDNS Rust runtime: facts-aware DNS governance loop."
keywords = ["dns", "resolver", "geoip", "routing", "observability"]
categories = ["network-programming"]

[workspace.dependencies]
# Internal crates (aliased for cleaner imports)
dns-types = { path = "crates/dns-types" }
dns-protocol = { path = "crates/dns-protocol" }
dns-transport = { path = "crates/dns-transport" }
runtime-config = { package = "border-dns-config", path = "crates/border-dns-config" }
route-cache = { package = "border-dns-cache", path = "crates/border-dns-cache" }
border-dns-upstream = { path = "crates/border-dns-upstream" }
border-dns-runtime = { path = "crates/border-dns-runtime" }
domain-knowledge = { package = "border-dns-domain-knowledge", path = "crates/border-dns-domain-knowledge" }
geoip = { package = "border-dns-geoip", path = "crates/border-dns-geoip" }
route-policy = { package = "border-dns-route-policy", path = "crates/border-dns-route-policy" }
border-dns-pipeline = { path = "crates/border-dns-pipeline" }
facts = { package = "border-dns-facts", path = "crates/border-dns-facts" }
border-dns-probes = { path = "crates/border-dns-probes" }

# Core dependencies
bytes = "1"
thiserror = "2"
anyhow = "1"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }

# Async runtime / networking
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "time",
    "signal",
    "sync",
    "io-util",
] }
tokio-util = { version = "0.7", features = ["codec", "time"] }

# TLS (DoT / DoH / DoQ)
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
rustls-pemfile = "2"
webpki-roots = "1"

# HTTP (DoH / DoJ server + DoH upstream client)
axum = "0.8"
axum-server = { version = "0.8", features = ["tls-rustls"] }
tower-http = { version = "0.6", features = ["trace", "cors", "timeout"] }
hyper = { version = "1", features = ["client", "http2"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "tokio", "http2"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["http2", "ring", "webpki-tokio"] }
http-body-util = "0.1"

# Config / serialization / CLI / Logging / tracing
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"

clap = { version = "4", features = ["derive"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "time"] }

# Concurrent state
dashmap = "6"
socket2 = "0.6"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

# These are too noisy for this project style.
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
similar_names = "allow"

[profile.dev]
debug = true
incremental = true

[profile.test]
debug = true
incremental = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
incremental = false
debug = false
