[package]
name = "border-dns-cache"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "DNS TTL cache with basic metrics for BorderDNS runtime."

[dependencies]
dns-types.workspace = true
dns-protocol.workspace = true
runtime-config.workspace = true
dashmap.workspace = true
tracing.workspace = true

[lints]
workspace = true
