[package]
name = "border-dns-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI entrypoint for BorderDNS: run, validate-config, inspect-cache, inspect-domain, inspect-governance."

[[bin]]
name = "border-dns"
path = "src/border_dns.rs"

[[bin]]
name = "border-dns-cli"
path = "src/main.rs"

[dependencies]
runtime-config.workspace = true
route-cache.workspace = true
border-dns-runtime.workspace = true
domain-knowledge.workspace = true
geoip.workspace = true
route-policy.workspace = true
facts.workspace = true
dns-types.workspace = true
chrono.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
serde_json.workspace = true

[lints]
workspace = true
