[package]
name = "border-dns-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Configuration model and validation for BorderDNS runtime."

[dependencies]
dns-types.workspace = true
serde.workspace = true
toml.workspace = true
thiserror.workspace = true

[lints]
workspace = true
