[package]
name = "border-dns-geoip"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "GeoIP lookup for BorderDNS: IP to country classification, CN/foreign/private/reserved scoping."

[dependencies]
dns-types.workspace = true
serde.workspace = true

[lints]
workspace = true
