[package]
name = "border-dns-pipeline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "DNS query hot-path orchestration for BorderDNS: route stage, cache stage, upstream stage, aggregation."

[dependencies]
dns-types.workspace = true
dns-protocol.workspace = true
dns-transport.workspace = true
runtime-config.workspace = true
route-cache.workspace = true
border-dns-upstream.workspace = true
domain-knowledge.workspace = true
geoip.workspace = true
route-policy.workspace = true
facts.workspace = true
chrono.workspace = true
tokio.workspace = true
serde.workspace = true
tracing.workspace = true

[lints]
workspace = true
