[package]
name = "border-dns-route-policy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Route decision and scoring logic for BorderDNS: geo-first, latency-second answer selection."

[dependencies]
dns-types.workspace = true
domain-knowledge.workspace = true
geoip.workspace = true
facts.workspace = true
dns-protocol.workspace = true
chrono.workspace = true
serde.workspace = true

[lints]
workspace = true
