[package]
name = "border-dns-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Production DNS runtime: UDP/TCP/DoT/DoH/DoQ/DoJ servers, bootstrap, graceful shutdown."

[dependencies]
dns-types.workspace = true
dns-protocol.workspace = true
dns-transport.workspace = true
runtime-config.workspace = true
route-cache.workspace = true
border-dns-upstream.workspace = true
border-dns-pipeline.workspace = true
domain-knowledge.workspace = true
facts.workspace = true
chrono.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
axum.workspace = true
axum-server.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
socket2.workspace = true

[lints]
workspace = true
