[package]
name = "dns-protocol"
# TO[AI]: when update the code in this package, please add the mini version.
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "DNS protocol wire codec: message decode/encode, name compression, EDNS, SVCB/HTTPS, TCP framing."

[dependencies]
dns-types.workspace = true
thiserror.workspace = true
bytes.workspace = true
smallvec.workspace = true

[lints]
workspace = true
