[package]
name = "dns-transport"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Transport abstraction for BorderDNS: unified inbound/outbound DNS transport layer."

[dependencies]
dns-types.workspace = true
dns-protocol.workspace = true
thiserror.workspace = true

[lints]
workspace = true
