[package]
name = "dns-types"
# TO[AI]: when update the code in this package, please add the mini version.
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Foundation types for BorderDNS: DomainName, RecordType, RecordClass, error primitives."

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
